<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Just Count</string>
	<string name="action_settings">Settings</string>
	<string name="title_section1">Section 1</string>
	<string name="title_section2">Section 2</string>
	<string name="title_section3">Section 3</string>
	<string name="edit_endDate">Set end date</string>
	<string name="edit_name_hint">Name</string>
	<string name="edit_countdown">Countdown</string>
	<string name="edit_start">Start number</string>
	<string name="edit_target">Target</string>
	<string name="edit_save">Save</string>
	<string name="button_clear_date">Clear date</string>
</resources>