<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="5dp">
	<EditText android:id="@id/nameEditView"
		android:hint="@string/edit_name_hint"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text" />
	<Button android:id="@id/endDateButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/edit_endDate" />
	<TextView android:id="@id/endDateTextView"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content" />
	<Button android:id="@id/clearDateButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/button_clear_date" />
	<CheckBox android:id="@id/countdownCheckbox"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/edit_countdown" />
	<EditText android:id="@id/startEditView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_start"
		android:inputType="number" />"
	<EditText android:id="@id/targetEditView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_target"
		android:inputType="number" />
	<Button android:id="@id/saveButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/edit_save" />"
</LinearLayout>